reuse translations: security

--- a/i18n/es/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -20,7 +20,7 @@ Una VPN es un tunel encriptado entre dos máquinas. En la práctica, permite hac
 
 ### En un servidor remoto (VPS o servidor dedicado)
 
-Puedes alquilar un servidor privado virtual (VPS) o una máquina dedicada a alojamientos [asociativos](https://db.ffdn.org/) o [comerciales](/providers/server).
+Puedes alquilar un servidor privado virtual (VPS) o una máquina dedicada a alojamientos [asociativos](https://db.ffdn.org/) o [comerciales](/providers/servers).
 
 - **Ventajas**: Tu servidor será rápido y su conexión veloz.
 - **Desventajas**: Ocasiona un gasto mensual por la máquina, y no tienes control físico.
