--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/10.admin.md
@@ -2,7 +2,7 @@
 title: Administrator web interface
 ---
 
-YunoHost est fourni avec une interface graphique d’administration (aussi appelée webadmin). L’autre méthode d'administration est d’utiliser la [ligne de commande](/commandline).
+YunoHost est fourni avec une interface graphique d’administration (aussi appelée webadmin). L’autre méthode d'administration est d’utiliser la [ligne de commande](/administer/admin_guide/command_line).
 
 ### Accès
 
