--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/60.security.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/60.security.md
@@ -2,41 +2,41 @@
 title: Security
 ---
 
-YunoHost has been developed to provide the best security without too much complication. Every protocol used in YunoHost is **encrypted**, only a password's hashes are stored and by default each user is able to access their personal directory only.
+YunoHost è stato sviluppato per la migliore sicurezza senza troppe complicazioni. Ogni protocollo in YunoHost è **cifrato** e view salvato solo un hash delle password e di default gli utenti possono accedere solo alla propria directory personale.
 
-Two things remain important to note:
+Rimangono due punti importanti da notare:
 
-- Installing additional apps can **significantly increase** the number of potential security flaws. Do not hesitate to get information about security flaws **before installing an app**, and try to only install apps which will suit your needs.
+- L'installazione di applicazioni addizionali può **aumentare significativamente** il numero di potenziali problemi di sicurezza. È importante chiedere informazioni relative a problemi di sicurezza **prima di installare un'applicazione** e provare ad installare solo le applicazioni necessarie.
 
-- The fact that YunoHost is a well-known and used piece of software increases the chances of an attack. If a flaw is discovered, it could potentially affect all YunoHost instances at once. Keep your system **up-to-date** to remain safe. Updates can be automated by installing the ["Unattended_upgrades" app](https://install-app.yunohost.org/?app=unattended_upgrades).
+- Poiché YunoHost è un software molto conosciuto ed usato aumenta le possibilità di un attacco. Se viene scoperto un problema potrebbe essere usato contemporaneamente contro tutte le istanze. Mantenete **aggiornato** il vostro sistema per aumentare la sicurezza. Gli aggiornamenti possono essere automatizzati installando l'[applicazione "Unattended_upgrades"](https://install-app.yunohost.org/?app=unattended_upgrades).
 
 :::tip
-If you need advice, do not hesitate to [ask us](/community/help).
+Se avete bisogno di aiuto non esitate a [chiedere](/help).
 :::
 
 :::danger
-<FAIcon icon="fa-shield"/> To discuss security flaws, contact the [YunoHost security team](/community/security_team).
-:::
+<FAIcon icon="fa-shield"/> Per discutere di problemi di sicurezza contattate il [team YunoHost security](/security_team).
+ :::
 
 ---
 
-## Improve security
+## Migliorare la sicurezza
 
-If your YunoHost server is used in a critical production environment, or if you want to improve its safety, you may want to follow these good practices.
+Se il vostro server YunoHost è usato in situazioni critiche di produzione oppure se volete migliorarne la sicurezza potreste seguire le seguenti buone pratiche.
 
 :::warning
-Following these instructions requires advanced knowledge of system administration.
+Per seguire queste istruzioni è necessario essere in possesso di conoscenze avanzate di amministrazione di sistema.
 :::
 
 :::tip
-Never close your current SSH connection before checking that your alterations work. Test your new configuration by opening a new terminal or window. That way, you can undo your alterations if anything goes wrong.
+Non chiudete mai la connessione SSH in uso prima di aver controllato che le modifiche fatte siano corrette. Provate la nuova configurazione aprendo un nuovo terminale o una nuova finestra cosicché possiate eliminare le modifiche se c'è qualcosa di sbagliato.
 :::
 
-### SSH authentication via key
+### Autenticazione SSH con la chiave
 
-By default, the SSH authentication uses the administration password. Deactivating this kind of authentication and replacing it by a key mechanism is advised.
+Di default l'autenticazione SSH chiede la password dell'amministratore. È consigliato disattivare questo tipo di autenticazione per sostituirlo con il sistema basato sulle chiavi.
 
-**On your client**:
+**Sul client**:
 
 ```bash
 ssh-keygen
@@ -44,13 +44,13 @@ ssh-copy-id -i ~/.ssh/id_rsa.pub <username@your_yunohost_server>
 ```
 
 :::tip
-If you run into permissions issues, set `username` as owner of the dir `~/.ssh` with `chown`. Be careful, for security reasons this directory should be in mode `700`.  
-If you are on Ubuntu 16.04 you should run `ssh-add` to initialize the SSH agent.
+Se incontrate problemi di permessi impostate `username` come proprietario della directory `~/.ssh` con il comando `chown`. Fate attenzione al fatto che, per ragiorni di sicurezza questa directory deve essere con il modo `700`.
+Se state usando Ubuntu 16.04 dovete avviare `ssh-add` per avviare l'agente SSH.
 :::
 
-Type your admnistration password and your key will be copied onto your server.
+Digitate la password di amministrazione e la chiave verrà copiata nel vostro server.
 
-**On your server**, editing the SSH configuration file to deactivate password authentication is handled by a system setting:
+**Sul vostro server** la modifica della configurazione di SSH per disattivare l'autenticazione a password è gestita da un'impostazione di sistema:
 
 ```bash
 sudo yunohost settings set security.ssh.ssh_password_authentication -v no
@@ -58,23 +58,22 @@ sudo yunohost settings set security.ssh.ssh_password_authentication -v no
 
 ---
 
-### Modify the SSH port
+### Modificare la porta SSH
 
-To prevent SSH connection attempts by robots that scan the internet for any server with SSH enabled, you can change the SSH port.
-This is handled by a system setting, which takes care of updating the SSH and Fail2Ban configuration.  
-There's no need to change this port if you've disabled password authentication.
+Per prevenire i tentativi di connessione dei robot che fanno scan di internet alla ricerca di server con SSH attivato è possibile cambiare la porta SSH.
+Questa impostazione è gestita da un'impostazione di sistema che aggiorna le configurazioni di SSH e di fail2ban.
 
 :::warning
-If you modify anything in the `/etc/ssh/sshd_config` file, even if only the port, YunoHost will no longer manage this file. For this reason, always use the YunoHost admin tools to make changes to the systems configuration files!
+Se modificate una qualsiasi impostazione nel file `/etc/ssh/sshd_config`, anche solo la porta di ascolto, YunoHost non gestirà più il file. Per questa ragione è necessario usare sempre gli strumenti di amministrazione per fare modifiche ai file di configurazione del sistema.
 :::
 
 ```bash
 sudo yunohost settings set security.ssh.ssh_port -v <new_ssh_port_number>
 ```
 
-**For subsequent SSH connections**, you need to add the `-p` option followed by the SSH port number.
+**Per tutte le connessioni SSH seguenti** è necessario aggiungere l'opzione `-p` seguita dal numero della porta di SSH.
 
-**Sample**:
+**Esempio**:
 
 ```bash
 ssh -p <new_ssh_port_number> admin@<your_yunohost_server>
@@ -82,33 +81,33 @@ ssh -p <new_ssh_port_number> admin@<your_yunohost_server>
 
 ---
 
-### Change cipher compatibility configuration
+### Cambiare la configurazione della compatibilità dei cifrari
 
-The default TLS configuration for services tends to offer good compatibility to support old devices. You can tune this policy for specific services like SSH and NGINX. By default, the NGINX configuration follows the [intermediate compatibility recommendation](https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29) from Mozilla. You can choose to switch to the 'modern' configuration which uses more recent security recommendations, but decreases compatibility, which may be an issue for your users and visitors using older devices. More details about compatibility can be found on [this page](https://wiki.mozilla.org/Security/Server_Side_TLS#Modern_compatibility).
+La configurazione TLS di default per i servizi è pensata per offrire una buona compatibilità di supporto ai vecchi device. È possibile configurare questa policy per specifici servizi come SSH e NGINX. La configurazione di default di NGINX segue il documento [intermediate compatibility recommendation](https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29) di Mozilla. Potete scegliere di cambiare nella modalità di configurazione 'moderna' che usa le raccomandazioni di sicurezza più recenti che però abbassano la compatibilità potendo portare a problemi con i vostri utenti che usano device più vecchi. Si possono trovare maggiori dettagli relativi alla compatibilità in [questa pagina](https://wiki.mozilla.org/Security/Server_Side_TLS#Modern_compatibility).
 
-Changing the compatibility level is not definitive and can be reverted if it doesn't fit with your environment.
+Il cambio di livello di compatibilità non è definitivo e può essere ripristinato nel caso in cui non si adatti alle vostre necessità.
 
-**On your server**, change the policy for NGINX
+**Sul vostro server**, cambio della policy per NGINX
 
 ```bash
 sudo yunohost settings set security.nginx.nginx_compatibility -v modern
 ```
 
-**On your server**, change the policy for SSH
+**Sul vostro server**, cambio della policy per SSH
 
 ```bash
 sudo yunohost settings set security.ssh.ssh_compatibility -v modern
 ```
 
-### Disable the YunoHost API
+### Disabilitare le API di YunoHost
 
-YunoHost administration is accessible through an **HTTP API**, served on the 6787 port by default (only on `localhost`).
-It can be used to administer a lot of things on your server, so malicious actors can also use it to damage your server.
-The best thing to do, if you know how to use the [command-line interface (CLI)](/administer/admin_guide/command_line), is to deactivate the `yunohost-api` service.
+La pagina di amministrazione di YunoHost è accessibile da un **API HTTP** che ascolta di default sulla porta 6787 (solo su localhost).
+Può essere usata per amministrare molti aspetti del vostro server e di conseguenza attori maligni possono usarla per danneggiarlo.
+La cosa migliore da fare, se conoscete l'iso dell'[interfaccia a lina di comando (CLI)](/administer/admin_guide/command_line), è disattivare il servizio `yunohost-api`.`
 
 :::warning
-This will completely disable both YunoHost's API and the web administration panel that relies on it.
-Proceed only if you are comfortable with the command line interface.
+Facendo così verranno completamente disabilitate le API di YunoHost e la pagina di amministrazione che si basa su queste.
+Procedete solo nel caso in cui siate a vostro agio usando l'interfaccia a linea di comando.
 :::
 
 ```bash
@@ -116,8 +115,8 @@ sudo systemctl disable yunohost-api
 sudo systemctl stop yunohost-api
 ```
 
-As `yunohost-api` is now disabled and not running, Diagnosis will report an error and cannot be ignored from the API.
-If you want to ignore this error, you can configure YunoHost from the CLI.
+Poiché il servizio `yunohost-api` è stato disabilitato e non sta girando Diagnosi riporterà un errore che non può essere ignorato.
+Se volete far sì che l'errore venga ignorato potete configurare in tal senso YunoHost dalla linea di comando.
 
 ```bash
 sudo yunohost diagnosis ignore --filter services service=yunohost-api
