--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/15.command_line.mdx
@@ -121,7 +121,7 @@ yunohost user ssh list-keys <username>
 
 ## SSH et sécurité
 
-Une discussion plus complète sur la sécurité de SSH peut être trouvée sur [la page dédiée](/security).
+Une discussion plus complète sur la sécurité de SSH peut être trouvée sur [la page dédiée](/administer/tutorials/security).
 
 ## La ligne de commande
 
