--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/60.security.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/45.tutorials/60.security.md
@@ -1,56 +1,60 @@
 ---
-title: Security
+title: Sécurité
 ---
 
-YunoHost has been developed to provide the best security without too much complication. Every protocol used in YunoHost is **encrypted**, only a password's hashes are stored and by default each user is able to access their personal directory only.
+YunoHost a été développé dans l’optique de fournir une sécurité maximale tout en restant accessible et facilement installable.
 
-Two things remain important to note:
+Tous les protocoles que YunoHost utilise sont **chiffrés**, les mots de passe ne sont pas stockés en clair, et par défaut chaque utilisateur n’accède qu’à son répertoire personnel.
 
-- Installing additional apps can **significantly increase** the number of potential security flaws. Do not hesitate to get information about security flaws **before installing an app**, and try to only install apps which will suit your needs.
+Deux points sont néanmoins importants à noter :
 
-- The fact that YunoHost is a well-known and used piece of software increases the chances of an attack. If a flaw is discovered, it could potentially affect all YunoHost instances at once. Keep your system **up-to-date** to remain safe. Updates can be automated by installing the ["Unattended_upgrades" app](https://install-app.yunohost.org/?app=unattended_upgrades).
+- L’installation d’applications supplémentaires **augmente le nombre de failles** potentielles. Il est donc conseillé de se renseigner sur chacune d’elle **avant l’installation**, d’en comprendre le fonctionnement et juger ainsi l’impact que provoquerait une potentielle attaque. N’installez **que** les applications qui semblent importantes pour votre usage.
+
+- Le fait que YunoHost soit un logiciel répandu augmente les chances de subir une attaque. Si une faille est découverte, elle peut potentiellement **toucher toutes les instances YunoHost** à un temps donné. Nous nous efforçons de corriger ces failles le plus rapidement possible, pensez donc à **mettre à jour régulièrement** votre système.
 
 :::tip
-If you need advice, do not hesitate to [ask us](/community/help).
+Si vous avez besoin de conseil, n’hésitez pas à [nous demander](/community/help).
 :::
 
 :::danger
-<FAIcon icon="fa-shield"/> To discuss security flaws, contact the [YunoHost security team](/community/security_team).
+<FAIcon icon="fa-shield"/> Pour discuter d'une faille de sécurité, contactez l'[équipe sécurité de YunoHost](/community/security_team).
 :::
 
 ---
 
-## Improve security
+## Améliorer la sécurité
 
-If your YunoHost server is used in a critical production environment, or if you want to improve its safety, you may want to follow these good practices.
+Si votre serveur YunoHost est dans un environnement de production critique ou que vous souhaitez améliorer sa sécurité, il est bon de suivre quelques bonnes pratiques.
 
 :::warning
-Following these instructions requires advanced knowledge of system administration.
+L’application des conseils suivants nécessite une connaissance avancée du fonctionnement et de l’administration d’un serveur. Pensez à vous renseigner avant de procéder à cette mise en place.
 :::
 
 :::tip
-Never close your current SSH connection before checking that your alterations work. Test your new configuration by opening a new terminal or window. That way, you can undo your alterations if anything goes wrong.
+Ne fermez jamais votre connexion SSH initiale sans avoir vérifié que vos modifications fonctionnent. Testez vos modifications dans une nouvelle fenêtre ou terminal. Ainsi, vous pourrez défaire vos modifications sans vous retrouver bloqués.
 :::
 
-### SSH authentication via key
+### Authentification SSH par clé
 
-By default, the SSH authentication uses the administration password. Deactivating this kind of authentication and replacing it by a key mechanism is advised.
+Voici un [tutoriel plus détaillé](http://doc.ubuntu-fr.org/ssh#authentification_par_un_systeme_de_cles_publiqueprivee).
 
-**On your client**:
+Par défaut, l’authentification SSH se fait avec le mot de passe d’administration. Il est conseillé de désactiver ce type d’authentification et de le remplacer par un mécanisme de clé de chiffrement.
+
+**Sur votre ordinateur de bureau :**
 
 ```bash
 ssh-keygen
-ssh-copy-id -i ~/.ssh/id_rsa.pub <username@your_yunohost_server>
+ssh-copy-id -i ~/.ssh/id_rsa.pub <nom_utilisateur@votre.domaine.tld>
 ```
 
 :::tip
-If you run into permissions issues, set `username` as owner of the dir `~/.ssh` with `chown`. Be careful, for security reasons this directory should be in mode `700`.  
-If you are on Ubuntu 16.04 you should run `ssh-add` to initialize the SSH agent.
+Si vous avez des problèmes de permissions, donnez à `nom_utilisateur` la possession du dossier `~/.ssh` avec `chown`. Attention, pour des raisons de sécurité, ce dossier doit être en mode 700 !
+Si vous êtes sur Ubuntu 16.04 vous devez faire  `ssh-add` pour initialiser l'agent SSH.
 :::
 
-Type your admnistration password and your key will be copied onto your server.
+Entrez le mot de passe d’administration et votre clé publique devrait être copiée sur votre serveur.
 
-**On your server**, editing the SSH configuration file to deactivate password authentication is handled by a system setting:
+**Sur votre serveur**, l'édition du fichier de configuration SSH pour désactiver l’authentification par mot de passe est gérée par un paramètre système :
 
 ```bash
 sudo yunohost settings set security.ssh.ssh_password_authentication -v no
@@ -58,57 +62,57 @@ sudo yunohost settings set security.ssh.ssh_password_authentication -v no
 
 ---
 
-### Modify the SSH port
+### Modifier le port SSH
 
-To prevent SSH connection attempts by robots that scan the internet for any server with SSH enabled, you can change the SSH port.
-This is handled by a system setting, which takes care of updating the SSH and Fail2Ban configuration.  
-There's no need to change this port if you've disabled password authentication.
+Pour éviter des tentatives de connexion SSH par des robots qui scannent tout Internet pour tenter des connexions SSH avec tout serveur accessible, on peut modifier le port SSH.
+C'est géré par un paramètre système, qui se charge de configurer les services SSH et Fail2Ban.  
+Il n'est pas utile de modifier ce port si vous avez désactivé l'authentification par mot de passe.
 
 :::warning
-If you modify anything in the `/etc/ssh/sshd_config` file, even if only the port, YunoHost will no longer manage this file. For this reason, always use the YunoHost admin tools to make changes to the systems configuration files!
+Si vous modifiez quoi que ce soit dans le fichier `/etc/ssh/sshd_config`, même si ce n'est que le port, YunoHost ne gérera plus ce fichier. Pour cette raison, utilisez toujours les outils d'administration de YunoHost pour effectuer des changements dans les fichiers de configuration du système !
 :::
 
 ```bash
-sudo yunohost settings set security.ssh.ssh_port -v <new_ssh_port_number>
+sudo yunohost settings set security.ssh.ssh_port -v <votre_numero_de_port_ssh>
 ```
 
-**For subsequent SSH connections**, you need to add the `-p` option followed by the SSH port number.
+**Lors de la prochaine connexion SSH**, vous devrez ajouter le paramètre `-p` suivi du port SSH.
 
-**Sample**:
+**Exemple**:
 
 ```bash
-ssh -p <new_ssh_port_number> admin@<your_yunohost_server>
+ssh -p <votre_numero_de_port_ssh> admin@<votre_serveur_yunohost>
 ```
 
 ---
 
-### Change cipher compatibility configuration
+### Durcir la sécurité de la configuration des services
 
-The default TLS configuration for services tends to offer good compatibility to support old devices. You can tune this policy for specific services like SSH and NGINX. By default, the NGINX configuration follows the [intermediate compatibility recommendation](https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29) from Mozilla. You can choose to switch to the 'modern' configuration which uses more recent security recommendations, but decreases compatibility, which may be an issue for your users and visitors using older devices. More details about compatibility can be found on [this page](https://wiki.mozilla.org/Security/Server_Side_TLS#Modern_compatibility).
+La configuration TLS par défaut des services tend à offrir une bonne compatibilité avec les vieux appareils. Vous pouvez régler cette politique pour les services SSH et NGINX. Par défaut, la configuration du NGINX suit la [recommandation de compatibilité intermédiaire](https://wiki.mozilla.org/Security/Server_Side_TLS#Intermediate_compatibility_.28default.29) de Mozilla. Vous pouvez choisir de passer à la configuration « moderne » qui utilise des recommandations de sécurité plus récentes, mais qui diminue la compatibilité, ce qui peut poser un problème pour vos utilisateurs et visiteurs qui utilisent de vieux appareils. Plus de détails peuvent être trouvés sur [cette page](https://wiki.mozilla.org/Security/Server_Side_TLS#Modern_compatibility).
 
-Changing the compatibility level is not definitive and can be reverted if it doesn't fit with your environment.
+Changer le niveau de compatibilité n'est pas définitif et il est possible de rechanger le paramètre si vous concluez qu'il faut revenir en arrière.
 
-**On your server**, change the policy for NGINX
+**Sur votre serveur**, modifiez la politique pour NGINX :
 
 ```bash
 sudo yunohost settings set security.nginx.nginx_compatibility -v modern
 ```
 
-**On your server**, change the policy for SSH
+**Sur votre serveur**, modifiez la politique pour SSH :
 
 ```bash
 sudo yunohost settings set security.ssh.ssh_compatibility -v modern
 ```
 
-### Disable the YunoHost API
+### Désactivation de l’API YunoHost
 
-YunoHost administration is accessible through an **HTTP API**, served on the 6787 port by default (only on `localhost`).
-It can be used to administer a lot of things on your server, so malicious actors can also use it to damage your server.
-The best thing to do, if you know how to use the [command-line interface (CLI)](/administer/admin_guide/command_line), is to deactivate the `yunohost-api` service.
+YunoHost est administrable via une **API HTTP**, servie sur le port 6787 par défaut (seulement sur `localhost`).
+Elle permet d’administrer une grande partie de votre serveur, et peut donc être utilisée à des **fins malveillantes**.
+La meilleure chose à faire si vous êtes habitués à la ligne de commande est de désactiver le service `yunohost-api`, et **utiliser la [ligne de commande](/administer/admin_guide/command_line)** en SSH.
 
 :::warning
-This will completely disable both YunoHost's API and the web administration panel that relies on it.
-Proceed only if you are comfortable with the command line interface.
+Ceci va désactiver à la fois l'API et l'interface d'administration web de YunoHost qui en dépend.
+Ne continuez que si vous êtes à l'aise avec la ligne de commande.
 :::
 
 ```bash
