--- a/i18n/it/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/index.mdx
@@ -7,7 +7,7 @@ sidebar_position: 0
 
 uesto sito contiene la documentazione di [YunoHost, un sistema operativo libero che si pone come obiettivo quello di semplificare l'amministrazione di un server e democraticizzare il self-hosting](/overview/what_is_yunohost).
 
-Nell'attesa che possiate occuparvi di un vostro server, potete cominciare a consultare la [guida dell'amministratore](/admindoc) per conoscere il self-hosting, come installare YunoHost sul vostro server e come installare le vostre prime applicazioni.
+Nell'attesa che possiate occuparvi di un vostro server, potete cominciare a consultare la [guida dell'amministratore](/category/administration-guide) per conoscere il self-hosting, come installare YunoHost sul vostro server e come installare le vostre prime applicazioni.
 
 Potete esplorare il [catalogo delle applicazioni](https://apps.yunohost.org) installabili sul vostro server (che può essere comunque consultato direttamente dalla vostra interfaccia d'amministrazione!)
 
