--- a/i18n/ru/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/index.mdx
@@ -7,7 +7,7 @@ sidebar_position: 0
 
 Это документация для [YunoHost, свободной операционной системы, направленной на упрощение администрирования сервера и демократизацию самостоятельного хостинга](/overview/what_is_yunohost).
 
-Как будущий администратор вашего собственного сервера, перейдите к [Руководству администратора](/admindoc), чтобы узнать больше о самостоятельном хостинге, о том, как установить сервер YunoHost и ваши первые приложения.
+Как будущий администратор вашего собственного сервера, перейдите к [Руководству администратора](/category/administration-guide), чтобы узнать больше о самостоятельном хостинге, о том, как установить сервер YunoHost и ваши первые приложения.
 
 Вы можете ознакомиться с [каталогом приложений](https://apps.yunohost.org), чтобы просмотреть приложения, которые могут быть установлены на сервере (хотя вы также можете ознакомиться с ним непосредственно из своего интерфейса администратора!)
 
