--- a/i18n/es/docusaurus-plugin-content-docs/current/index.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/index.mdx
@@ -7,7 +7,7 @@ sidebar_position: 0
 
 Estás en la documentación de [YunoHost, un sistema operativo libre con el objeto de simplificar la administración de servidores y democratizar el auto-hospedaje web](/overview/what_is_yunohost).
 
-Como proxima administradora de tu servidor, visita la [Guía de administración](/admindoc) para aprender más del auto-hospedaje web, Como instalar tu servidor YunoHost y añadirle las primeras apps.
+Como proxima administradora de tu servidor, visita la [Guía de administración](/category/administration-guide) para aprender más del auto-hospedaje web, Como instalar tu servidor YunoHost y añadirle las primeras apps.
 
 Échale un ojo al [catálogo de aplicaciones](https://apps.yunohost.org) para navegar las aplicaciones disponibles (¡aunque también puedes verlas directamente en la interfaz de administración!)
 
