reuse translations: apps

--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/30.apps/30.apps.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/30.apps/30.apps.mdx
@@ -1,5 +1,5 @@
 ---
-title: Applications
+title: Les applications
 ---
 
 import Tabs from '@theme/Tabs';
@@ -9,7 +9,7 @@ import Highlight from '@site/src/components/Highlight';
 import {HighlightApplications, HighlightAppInstall} from '@site/src/components/Highlight';
 import LinkButton from '@site/src/components/LinkButton';
 
-One of the key feature of YunoHost is the ability to easily install applications which are then immediately usable. Example of applications include a blog system, a "cloud" (to host and sync files), a website, an RSS reader...
+L'une des fonctionnalités principales de YunoHost est la possibilité d'installer facilement des applications immédiatement utilisables. Pour donner des exemples d'application, il est possible d'installer un système de blog, un "cloud" (pour héberger et synchroniser des fichiers), un site web, un lecteur RSS...
 
 Applications can be installed and managed through the webadmin interface in <HighlightApplications/> or through commands of the `yunohost app` category.
 
@@ -22,7 +22,7 @@ The application catalog and its categories can be browsed directly from the weba
 </div>
 
 :::caution
-Be careful and stay reasonable on the number of installed applications. Each additional installation increases the attack surface and the risk of failure. Ideally, if you want to test, do it with another instance for example in [a virtual machine](/install/install_on/virtualbox).
+Attention à rester raisonnable sur le nombre d'applications installées. Chaque installation supplémentaire augmente la surface d'attaque et les risques de panne. Idéalement, si vous souhaitez faire des tests, faites-le avec une autre instance par exemple dans [une machine virtuelle](/install/install_on/virtualbox).
 :::
 
 ## Installing an app
