--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/30.apps/30.apps.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/30.apps/30.apps.mdx
@@ -9,7 +9,7 @@ import Highlight from '@site/src/components/Highlight';
 import {HighlightApplications, HighlightAppInstall} from '@site/src/components/Highlight';
 import LinkButton from '@site/src/components/LinkButton';
 
-One of the key feature of YunoHost is the ability to easily install applications which are then immediately usable. Example of applications include a blog system, a "cloud" (to host and sync files), a website, an RSS reader...
+Una delle caratteristiche principali di YunoHost è la possibilità di installare facilmente applicazioni che saranno immediatamente utilizzabili. Ad esempio possiamo installare un blog, un "cloud" (per salvare e sincronizzare file), un sito web, un lettore RSS...
 
 Applications can be installed and managed through the webadmin interface in <HighlightApplications/> or through commands of the `yunohost app` category.
 
@@ -22,12 +22,13 @@ The application catalog and its categories can be browsed directly from the weba
 </div>
 
 :::caution
-Be careful and stay reasonable on the number of installed applications. Each additional installation increases the attack surface and the risk of failure. Ideally, if you want to test, do it with another instance for example in [a virtual machine](/install/install_on/virtualbox).
+Siate ragionevoli sul numero di programmi che installate. Ogni programma aumenta le possibilità
+di errori e attacchi dall'esterno. È preferibile, se desiderate effettuare dei test, utilizzare una [macchina virtuale](https://yunohost.org/en/install/hardware:virtualbox) con un'altra istanza.
 :::
 
-## Installing an app
+## Installare un'applicazione
 
-Let's say you want to install a *Custom Webapp*. Before actually running the installation steps, YunoHost will usually have you fill in a form to properly set it up for you.
+Diciamo che volete installare una *Custom Webapp*. Prima di avviare i passi dell'installazione YunoHost  normalmente richiede di compilare un form per eseguire correttamente l'installazione.
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
@@ -38,11 +39,11 @@ Let's say you want to install a *Custom Webapp*. Before actually running the ins
   </TabItem>
 </Tabs>
 
-### Subpaths vs. individual domains per apps
+## Sotto-directory e domini individuale per le applicazioni
 
-Among specific questions, forms usually ask you to choose a domain and a path onto which the app will be accessible.
+Fra le domande specifiche i form normalmente chiedono di scegliere un dominio ed un path da dove sarà accessibile l'applicazione.
 
-In the context of YunoHost, it is quite common to have a single (or a few) domains on which several apps are installed in "subpaths", so that you end up with something like this:
+In un'installazione normale di YunoHost è normale avere un dominio singolo (o al limite un piccolo numero di domini) per tutte le applicazioni installate si "sotto-directory" con una configurazione di questo tipo:
 
 ```text
 yolo.com
@@ -52,11 +53,11 @@ yolo.com
      ├── /wiki  : DokuWiki (a wiki)
 ```
 
-Alternatively, you may choose to install each (or some) apps on a dedicated domain. Beyond the aesthetic, using sub-domains instead of sub-paths allows the possibility to move a service to another server more easily. Also, some applications may need an entire domain dedicated to them, for technical reasons. The disadvantage is that you have to add a new domain each time, and therefore potentially configure additional DNS records, restart the diagnostics and install a new Let's Encrypt certificate.
+È però possibile scegliere di installare ogni applicazione (o un gruppo di esse) in un dominio dedicato. AL di là di un aspetto puramente estetico, usare sotto-domini invece di sotto-directory permette di spostare un sevizio da un server ad un altro più facilmente. Inoltre alcune applicazioni devono essere installate su un dominio proprio dedicato per ragioni tecniche con lo svantaggio che è necessario aggiungere un dominio per ogni applicazione e di conseguenza configurare ulteriori record DNS, riavviare il sistema di diagnostica e installare un nuovo certificato Let's Encrypt.
 
 This might look prettier for end users, but is generally considered more complicated and less efficient in the context of YunoHost, since you need to add a new domain each time. Nevertheless, some apps might need an entire domain dedicated to them, for technical reasons.
 
-If all apps from the previous example were installed on a separate domain, this would give something like this:
+Se le applicazioni dell'esempio precedente fossero state installate su un dominio separato questo potrebbe essere il risultato:
 
 ```text
 blog.yolo.com  : Wordpress (a blog)
@@ -66,78 +67,79 @@ wiki.yolo.com  : DokuWiki (a wiki)
 ```
 
 :::info
-Many applications integrate a feature that allows you to change the URL of your application. This choice between subpath and subdomain can be reversed in some cases via a simple manipulation in the administration interface.
+Molte applicazioni integrano una caratteristica che permette di cambiare l'URL dell'applicazione. La scelta fra sotto-directory e sotto-dominio in alcuni casi può essere cambiata con una semplice modifica nell'interfaccia di amministrazione.
 :::
 
-### User access management and public apps
+### Gestione accessi utente e applicazioni pubbliche
 
-The installation form usually asks whether or not the app should be publically accessible. If you choose to not make it public, only users logged in YunoHost will be able to reach it.
+Il form di installazione normalmente chiede se l'applicazione deve essere o meno accessibile pubblicamente. Se non viene resa pubblica possono raggiungerla solo gli utente loggati su YunoHost.
 
 :::tip
-After installation, this can be configured via the webadmin in the [Groups and permissions panel](/administer/admin_guide/users/groups_and_permissions), or similarly via the command-line subcategory `yunohost user permission`.
+Dopo l'installazione è possibile configurare questa cosa dall'interfaccia via web [Gestisci i gruppi e i permessi](/administer/admin_guide/users/groups_and_permissions) e allo stesso modo con la riga di comando con la categoria `yunohost user permission`.
 :::
 
-### Instructions after installation
+## Istruzioni post installazione
 
-Some applications need to give you instructions, URLs or credentials once they are installed. So remember to check the email of the first user account or the admin user selected before installation, if it was prompted.
+Alcune applicazioni, una volta installate, mostrano delle informazioni, possono essere URL o credenziali, per cui è necessario consultare la mail dell'account principale o dell'account amministratore selezionato prima dell'installazione se viene richiesto.
 
-### Multi-instance applications
+### Applicazioni multi-instanza
 
-Some applications support the ability to be installed several times (at different locations) ! To do so, just go another time in <HighlightApplications/> → <HighlightAppInstall/>, and select again the application to install.
+Per alcune applicazioni è possibile installarne più copie (in diverse directory) ! Per fare ciò è sufficiente cliccare su `Applicazioni > [fa=plus /] Installa` e selezionare nuovamente l'applicazione da installare.
 
-## LDAP / SSO integration
+## Integrazione LDAP / SSO
 
-Applications that allow users to register may support integration with the LDAP / Single Sign On of YunoHost, so that users who connect to the user portal can be automatically logged in all these apps.
+Le applicazioni che permettono la registrazione degli utenti possono supportare l'integrazione con i sistemi LDAP / Sing Sign On di YunoHost di modo che una volta connessi al portare gli utenti vengono loggati direttamente nell'applicazione.
 
-However, some applications do not support this as it can be either not implemented in the upstream, or the package does not work on this part yet. This information is usually available on the README of the application package.
+Però alcune applicazioni non lo supportano e non è possibile neanche implementare il supporto nell'applicazione originaria oppure l'applicazione non funziona in questa funzione. Normalmente queste informazioni si trovano nel file README dell'applicazione stessa.
 
-## Application configuration
+## Configurazione dell'applicazione
 
-After installation, some settings handled by YunoHost can be tweaked, such as user and group permissions, application's tile and label in the SSO page, or its access URL.
+Alcune impostazioni possono essere gestite da YunoHost dopo l'installazione come ad esempio i permessi di utenti e gruppi, il tile e l'etichetta dell'applicazione nella pagina SSO e il relativo URL di connessione.
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
 
-You can access the app's operations page by clicking its name in the applications list.
+È possibile accedere alla pagina relative alle operazioni dell'applicazione cliccando sul nome nella lista delle applicazioni.
 
 <Figure alt="Application operations page" src="/img/app_config_operations.png" caption="Application operations page in the webadmin"/>
 
-You can also delete the application from this page.
+Da questa pagina è anche possibile eliminare l'applicazione.
 
   </TabItem>
   <TabItem value="cli" label="From the command line">
 
-From the command line, you can change:
+Dalla riga di comando è possibile cambiare:
 
-- the app's label in the SSO: `yunohost app change-label <app> <new_label>`
-- the app's url: `yunohost app change-url app [-d <DOMAIN>] [-p <PATH>]`
+- l'etichetta dell'applicazione nel sistema SSO: `yunohost app change-label <app> <new_label>`
+- l'url di connessione: `yunohost app change-url <app> [-d <DOMAIN>] [-p <PATH>]`
 
-You can also delete the app: `yunohost app remove <app>`
+È anche possibile eliminare l'applicazione: `yunohost app remove <app>`
 
-`<app>` is to be replaced with the app's ID. If this is the first instance of the app, like Nextcloud, the ID is `nextcloud`. If this is the second, then it's `nextcloud__2` and so on. To list all your apps and check their ID, you can run `yunohost app info`.
+dove `<app>` deve essere sostituito con l'identificativo dell'applicazione. Se questa ha una sola istanza, come ad esempio Nextcloud l'identificativo è `nextcloud`, se invece è il secondo allora è `nextcloud__2` e così via. È possibile elencare tutte le applicazioni e i loro identificativi con il comando `yunohost app info`.
 
   </TabItem>
 </Tabs>
 
-### Configuration panels
 
-Some apps include a *configuration panel*, which features actions and settings specific for each app that they usually do not handle themselves. They can also spare you the need for altering configuration files by hand.
+### Pannelli di configurazione
+
+Alcune applicazioni includono un *pannello di configurazione* che contiene azioni e impostazioni specifiche per ogni applicazione che vengono normalmente gestite al suo interno. Inoltre includono anche la possibilità di modificare file di configurazione senza doverlo fare da soli.
 
 :::info
-Configuration panels are *not* meant to tweak every aspects of the apps. You will surely use their own administration panels more often than YunoHost's configuration panels.
+I pannelli di configurazione non sono realizzati per modificare ogni aspetto dell'applicazione: userete sicuramente molto più spesso i pannelli di configurazione interni di quelli forniti da YunoHost.
 :::
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
 
-The configuration panels are accessible in the webadmin in their operations page, trough the <Highlight no_break={true} color='darkblue'><FAIcon icon="fa-cogs"/> Config panel</Highlight> button.
+È possibile accedere alla pagina relative alle operazioni dell'applicazione cliccando sul bottone `[fa=cogs /] Configurazione`.
 
 <Figure alt="My Webapp configuration panel" src="/img/app_config_panel.png" caption="Configuration panel for My Webapp"/>
 
   </TabItem>
   <TabItem value="cli" label="From the command line">
 
-From the command line, you can list the configuration panel settings with the following command: `yunohost app config get <app>`
+Dalla riga di comando è possibile elencare le impostazione del pannello di configurazione con il comando `yunohost app config get <app>`
 
 ```bash
 $ yunohost app config get my_webapp
@@ -152,30 +154,28 @@ main.sftp.with_sftp:
   value: yes
 ```
 
-To change a setting, either use `yunohost app config set <app>` to get prompted about all the settings, or use `yunohost app config set <app> <key> -v <new_value>` to alter a specific one.
+Per modificare una configurazione si può usare il comando `yunohost app config set <app>` per avere la richiesta di modifica di ogni impostazione oppure il comando`yunohost app config set <app>` per modficarne una specifica.
 
-The `<key>` is the setting name, for example `main.sftp.with_sftp` from above.
+La parola `<key>` è il nome dell'impostazione come nell'esempio sopra `main.sftp.with_sftp`.
 
   </TabItem>
 </Tabs>
 
-## Execute commands within the app
+## Eseguire comandi dall'applicazione
 
-Starting YunoHost v11.1.21.4, if you need to execute commands with the app's binary, or PHP commands, etc., you can execute the command `yunohost app shell <app>`.
-It will:
+Dalla versione di YunoHost v11.1.21.4 è possibile eseguire un comando con il binario dell'applicazione o comandi PHP con il comando `yunohost app shell <app>`.
+In questo modo:
 
-- open a new Bash shell as the app's system user
-- open the app's working directory (e.g. `/var/www/<app>`)
-- preload the environment with variables taken from the app's service, if it exists
-- override `php`, so that it points to the PHP version used by the app
+- verrà avviata una shell Bash come l'utente di sistema dell'applicazione
+- verrà aperta la directory di lavoro dell'applicazione (ad esempio `/var/www/<app>`)
+- carico di tutte le variabili d'ambiente come da file service dell'applicazione se queste esistono
+- verrà il usata la versione di `php` usata dall'applicazione
 
-## Applications packaging
+## Packaging delle applicazioni
 
-Applications must be packaged manually by application packagers/maintainers. Apps can be integrated with YunoHost to support upgrades, backup/restore and LDAP/SSO integration among other things.
+Le applicazioni devono essere preparate (packaging) manualmente dai programmatori (packagers)/manutentori. Le applicazioni possono essere integrate con YunoHost perché supportino gli upgrade, i backup e restore e l'integrazione con LDAP/SSO fra le altre cose.
 
-If you want to learn or contribute to app packaging, please check the [contributor documentation](/contribute/).
-
-### Integration and quality levels
+## Integrazione e qualità
 
 Automated tests are being run regularly to test the integration and quality of all apps who were declared to be `working` by packagers. The result is a level between 0 and 8, whose meaning is detailed on [this page](/contribute/packaging_apps/testing). Some tests results may also be available [on this dashboard](https://dash.yunohost.org/appci/branch/stable).
 
