reuse translations: certificate

--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -104,7 +104,7 @@ Un VPN est un tunnel chiffré entre deux machines. En pratique, cela permet de f
 
 ### Sur un serveur distant (VPS ou serveur dédié)
 
-Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/providers/servers).
+Vous pouvez louer un serveur privé virtuel ou une machine dédiée à des hébergeurs [associatifs](https://db.ffdn.org/) ou [commerciaux](/install/providers/servers).
 
 - **Avantages** : votre serveur sera rapide et la connectivité internet sera bonne ;
 - **Inconvénients** : il vous faudra payer des frais mensuels pour la machine, et vous n'aurez pas de contrôle physique dessus.
