reuse translations: certificate

--- a/i18n/de/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -20,7 +20,7 @@ Ein VPN ist ein verschlüsselter Tunnel zwischen zwei Computern. In der Praxis s
 
 ### Auf einem Remote-Server (VPS oder dedizierter Server)
 
-Sie können einen virtuellen privaten Server oder eine dedizierte Maschine von [associative](https://db.ffdn.org/) oder von anderen [kommerziellen](/providers/servers) "Cloud"-Anbietern mieten.
+Sie können einen virtuellen privaten Server oder eine dedizierte Maschine von [associative](https://db.ffdn.org/) oder von anderen [kommerziellen](/install/providers/servers) "Cloud"-Anbietern mieten.
 
 - **Pros** : Ihr Server und seine Internetverbindung sind schnell;
 - **Cons** : Sie müssen ein monatliches Abonnement bezahlen und haben keine physische Kontrolle über Ihren Server.
