--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/certificate.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/certificate.mdx
@@ -5,79 +5,99 @@ title: Certificate
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-Certificates are used to guarantee the confidentiality and authenticity of the communication between a web browser and your server. In particular, they protect against attackers trying to impersonate your server.
+Les certificats sont utilisés pour garantir la confidentialité et l'authenticité des communications entre un navigateur web et votre serveur. En particulier, il permet de protéger les visiteurs contre des attaquants qui chercheraient à usurper l'identité du serveur.
 
-YunoHost provides a **self-signed** certificate, it means that your server guaranties the certificate validity. It's enough **for personal usage**, because you trust your own server. But this could be a problem if you want to open access to anonymous like web user for a website.
+YunoHost fournit par défaut un certificat **auto-signé**, ce qui veut dire que c’est votre serveur qui garantit la validité du certificat. C’est suffisant **pour un usage personnel**, car vous pouvez avoir confiance en votre serveur, en revanche cela posera problème si vous comptez ouvrir l’accès à votre serveur à des anonymes, par exemple pour héberger un site web.
 
-In practice, visitors will see a screen list this:
+En effet, les utilisateurs devront passer par un écran de ce type :
 
 ![](/img/postinstall_error.png)
 
-Which basically asks the visitor : **"Do you trust the server hosting this website?"**. This can rightfully frighten a lot of people.
+Cet écran revient à demander **« Avez-vous confiance au serveur qui héberge ce site ? »**.
+Cela peut effrayer vos utilisateurs (à juste titre).
 
-To avoid this confusion, it's possible to get a certificate signed a known authority named **Let's Encrypt** which provide free certificates directly recognized by browsers. YunoHost allows to directly install this certificate from the web administration interface or from the command line.
+Pour éviter cette confusion, il est possible d’obtenir un certificat, reconnu directement par les navigateurs, signé par une autorité « connue » : **Let's Encrypt**, **Gandi**, **RapidSSL**, **StartSSL**, **Cacert**.
 
-### Install a Let's Encrypt certificate
+**Let's Encrypt** propose des certificats gratuits. Depuis la version 2.5, YunoHost permet d'installer directement un tel certificat depuis l'interface d'administration ou la ligne de commande. La suite du document détaille l'installation et la gestion d'un tel certificat. Vous pouvez également [installer un certificat d'une autre autorité que Let's Encrypt](/certificate_custom).
 
-Before attempting to install a Let's Encrypt certificate, you should make sure that your DNS is correctly configured (your.domain.tld should point to your server's IP) and that your domain is accessible through HTTP from outside your local network (i.e. at least port 80 should be forwarded to your server).
+### Installer un certificat Let's Encrypt
+
+Avant de chercher à installer un certificat Let's Encrypt, assurez vous que
+votre DNS est correctement configuré (votre.domaine.tld doit pointer sur l'IP
+de votre serveur) et que votre site est accessible en HTTP depuis l'extérieur
+(c.-à-d. qu'au moins le port 80 est correctement redirigé vers votre serveur).
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-Go to the 'Domain' part of the admin interface, then in the section dedicated to your.domain.tld. You should find a 'SSL certificate' button:
+Rendez-vous dans la partie 'Domaines' de l'interface d'administration, puis dans
+la section dédiée à votre domaine. Vous trouverez un bouton 'Certificat SSL'.
 
-![](/img/domain-certificate-button.png)
+![](/img/domain-certificate-button-fr.png)
 
-In the 'SSL certificate' section, you can see the status of the current certificate. If you just added the domain, it should be a self-signed certificate.
+Dans la section 'Certificat SSL', vous pourrez voir l'état actuel du certificat.
+Si vous venez d'ajouter le domaine, il dispose d'un certificat auto-signé.
 
-![](/img/certificate-before-LE.png)
+![](/img/certificate-before-LE-fr.png)
 
-If your domain is correctly configured, it is then possible to install the Let's Encrypt certificate via the green button.
+Si votre domaine est correctement configuré, il vous est alors possible de
+passer à un certificat Let's Encrypt via le bouton vert.
 
-![](/img/certificate-after-LE.png)
+![](/img/certificate-after-LE-fr.png)
 
-Once the install is made, you can check that the certificate is live via your browser by going to your domain in HTTPS. The certificate will automatically be renewed every three months.
+Une fois l'installation effectuée, vous pouvez vous rendre sur votre domaine
+via votre navigateur, en HTTPS, pour vérifier que votre certificat est bien
+signé par Let's Encrypt. Le certificat sera renouvelé automatiquement tous les
+trois mois environ.
 
 ![](/img/certificate-signed-by-LE.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-Connect to your server through SSH.
+Connectez-vous sur votre serveur en SSH.
 
-You can check the status of your current certificate with:
-
-```bash
-yunohost domain cert status your.domain.tld
-```
-
-Install a Let's Encrypt certificate with
+Vous pouvez vérifier le statut actuel de votre certificat via :
 
 ```bash
-yunohost domain cert install your.domain.tld
+yunohost domain cert status votre.domaine.tld
 ```
 
-This should return :
+Installez le certificat Let's Encrypt via :
+
+```bash
+yunohost domain cert install votre.domaine.tld
+```
+
+Cette commande doit retourner :
 
 ```bash
 Success! The SSOwat configuration has been generated
-Success! Successfully installed Let's Encrypt certificate for domain DOMAIN.TLD!
+Success! Successfully installed Let's Encrypt certificate for domain votre.domaine.tld!
 ```
 
-Once this is done, you can check that the certificate is live via your browser by going to your domain in HTTPS. The certificate will automatically be renewed every three months.
+Une fois l'installation effectuée, vous pouvez vous rendre sur votre domaine
+via votre navigateur, en HTTPS, pour vérifier que votre certificat est bien
+signé par Let's Encrypt. Le certificat sera renouvelé automatiquement tous les
+trois mois environ.
 
 </TabItem>
 </Tabs>
 
-#### Troubleshooting
+##### En cas de problème
 
-If due to some bad tweaking, your certificate ends up in a bad state (e.g. lost the certificate or unable to read the files), you should be able to clean the situation by regenerating a self-signed certificate:
+Si, suite à une mauvaise manipulation, un certificat se retrouve dans une
+situation fâcheuse (e.g. perte du certificat ou impossible de lire le
+certificat), il est possible de repartir sur des bases propres en regénérant un
+certificat auto-signé :
 
 ```bash
-yunohost domain cert install your.domain.tld --self-signed --force
+yunohost domain cert install votre.domaine.tld --self-signed --force
 ```
 
-If YunoHost thinks that your domain is badly configured despite the fact that you checked the DNS configuration and you have access in HTTP to your server from outside your local network, then you can:
+Si YunoHost trouve que votre domaine est mal configuré quand bien même vous
+avez bien vérifié votre configuration DNS et avez bien accès à votre serveur en
+HTTP depuis l'extérieur, vous pouvez tenter :
 
-- add a line `127.0.0.1 your.domain.tld` to the file `/etc/hosts` on your server;
-- if the certificate installation still doesn't work, you can disable the checks with `--no-checks` after the `cert install` command.
+- d'ajouter une ligne `127.0.0.1 votre.domaine.tld` au fichier `/etc/hosts` sur votre serveur ;
+- si l'installation ne fonctionne toujours pas, de désactiver les vérifications en ajoutant `--no-checks` à la commande `cert install`.
