--- a/i18n/it/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -20,7 +20,7 @@ Una VPN è un tunnel criptato tra due macchine. In pratica permette di avere una
 
 ### Su un server distante (VPS o server dedicato)
 
-Puoi affittare un server virtuale privato o un macchina dedicata da fornitori "Cloud" come [associazioni](https://db.ffdn.org) o [commerciali](/providers/servers)
+Puoi affittare un server virtuale privato o un macchina dedicata da fornitori "Cloud" come [associazioni](https://db.ffdn.org) o [commerciali](/install/providers/servers)
 
 - **Pro**: il tuo server e la connessione saranno veloci;
 - **Contro**: dovrai pagare un canone mensile per la macchina e non avrai il controllo fisico del tuo server.
