--- a/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/certificate.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/certificate.mdx
@@ -1,83 +1,98 @@
 ---
-title: Certificate
+title: Zertifikat
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-Certificates are used to guarantee the confidentiality and authenticity of the communication between a web browser and your server. In particular, they protect against attackers trying to impersonate your server.
+Digitale Zertifikate werden verwendet, um die Vertraulichkeit und Echtheit der Kommunikation zwischen einem Webbrowser und Ihrem Server zu gewährleisten. Insbesondere schützen sie vor Angreifern, die versuchen, Ihren Server zu identifizieren.
 
-YunoHost provides a **self-signed** certificate, it means that your server guaranties the certificate validity. It's enough **for personal usage**, because you trust your own server. But this could be a problem if you want to open access to anonymous like web user for a website.
+YunoHost bietet ein **selbstsigniertes-Zertifikat**. Es bedeutet, dass Ihr Server die Gültigkeit des Zertifikats garantiert. Es genügt **für eine persönliche Verwendung**, weil Sie Ihrem eigenen Server vertrauen. Dies könnte jedoch ein Problem sein, wenn Sie den Zugriff auf einem Fremden, wie Webbenutzer, für eine Website öffnen möchten.
 
-In practice, visitors will see a screen list this:
+Und zwar, werden die Benutzer eine solche Warnung auf dem Bildschirm sehen:
 
-![](/img/postinstall_error.png)
+![](/img/postinstall_error_de.png)
 
-Which basically asks the visitor : **"Do you trust the server hosting this website?"**. This can rightfully frighten a lot of people.
+Was im Wesentlichen den Besucher fragt: **"Vertrauen Sie dem Server, der diese Website hostet?"**.
+Dies kann viele Menschen selbstverständlich erschrecken.
 
-To avoid this confusion, it's possible to get a certificate signed a known authority named **Let's Encrypt** which provide free certificates directly recognized by browsers. YunoHost allows to directly install this certificate from the web administration interface or from the command line.
+Um diese Verwirrung zu vermeiden, ist es möglich, ein digitales Zertifikat zu erhalten, welches direkt von den Browsern anerkannt wurde, und von einer "bekannten" Zertifizierungsstelle unterzeichnet wird: **Let's Encrypt**, **Gandi**, **RapidSSL**, **StartSSL**, **Cacert**.
 
-### Install a Let's Encrypt certificate
+**Let's Encrypt** bietet kostenlose Zertifikate an. Seit der Version 2.5 erlaubt YunoHost ein solches Zertifikat direkt von der Verwaltungsschnittstelle oder der Befehlszeile zu installieren. Der Rest des Dokuments erklärt die Installation und Verwaltung eines solchen Zertifikats. Sie können auch [ein digitales Zertifikat von einer anderen Zertifizierungstelle als Let's Encrypt installieren](/certificate_custom).
 
-Before attempting to install a Let's Encrypt certificate, you should make sure that your DNS is correctly configured (your.domain.tld should point to your server's IP) and that your domain is accessible through HTTP from outside your local network (i.e. at least port 80 should be forwarded to your server).
+### Digitales Zertifikat Let's Encrypt installieren
+
+Bevor Sie ein Let's Encrypt-Zertifikat installieren, vergewissern Sie sich, dass Ihr DNS ordnungsgemäß konfiguriert ist (Ihre.Domain.tld sollte auf die IP Ihres Servers zeigen) und Ihre Website von außen in HTTP zugänglich ist (d. h. zumindest der Port 80 wird korrekt an Ihren Server umgeleitet).
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-Go to the 'Domain' part of the admin interface, then in the section dedicated to your.domain.tld. You should find a 'SSL certificate' button:
+Gehen Sie zu dem Abschnitt "Domaine" der Administrationsoberfläche. Dann
+zu dem Abschnitt, der Ihrer Domain entspricht. Da steht einen Knopf 'Certificat SSL'.
 
 ![](/img/domain-certificate-button.png)
 
-In the 'SSL certificate' section, you can see the status of the current certificate. If you just added the domain, it should be a self-signed certificate.
+Im Abschnitt 'Certificat SSL', wird der aktuelle Status angegeben.
+Wurde der Domain-Name vor kurzem hinzugefügt, so steht ein selbst-signiertes Zertifikat zur verfügung.
 
 ![](/img/certificate-before-LE.png)
 
-If your domain is correctly configured, it is then possible to install the Let's Encrypt certificate via the green button.
+Wenn die Domain korrekt konfiguriert ist, dann ist es möglich
+mit dem grünen Knopf ein Let's Encrypt-Zertifikat einzusetzen.
 
 ![](/img/certificate-after-LE.png)
 
-Once the install is made, you can check that the certificate is live via your browser by going to your domain in HTTPS. The certificate will automatically be renewed every three months.
+
+Nach Abschluss der Installation, die ensprechende Domain mit Webbrowser
+in HTTPS-Modus besuchen um die Berücksichtigung des digitalen Zertifikats
+von Let's Encrypt zu überprüfen. Das digitale Zertifikat wird automatisch etwa alle drei Monate erneuert.
 
 ![](/img/certificate-signed-by-LE.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-Connect to your server through SSH.
+SSH-Zugang auf Ihrem Server herstellen.
 
-You can check the status of your current certificate with:
-
-```bash
-yunohost domain cert status your.domain.tld
-```
-
-Install a Let's Encrypt certificate with
+So können Sie den aktuellen Status des digitalen Zertifikats überprüfen
 
 ```bash
-yunohost domain cert install your.domain.tld
+yunohost domain cert status Ihre.domain.tld
 ```
 
-This should return :
+Dann Let's Encrypt-Zertifikat installieren
+
+```bash
+yunohost domain cert install Ihre.domain.tld
+```
+
+Ergebnis sollte so aussehen :
 
 ```bash
 Success! The SSOwat configuration has been generated
 Success! Successfully installed Let's Encrypt certificate for domain DOMAIN.TLD!
 ```
 
-Once this is done, you can check that the certificate is live via your browser by going to your domain in HTTPS. The certificate will automatically be renewed every three months.
+Nach Abschluss der Installation, die ensprechende Domain mit Webbrowser
+in HTTPS-Modus besuchen um die Berücksichtigung des digitalen Zertifikats
+von Let's Encrypt zu überprüfen. Das digitale Zertifikat wird automatisch etwa alle drei Monate erneuert.
 
 </TabItem>
 </Tabs>
 
-#### Troubleshooting
+##### Fehlerbehebung
 
-If due to some bad tweaking, your certificate ends up in a bad state (e.g. lost the certificate or unable to read the files), you should be able to clean the situation by regenerating a self-signed certificate:
+Wenn das Zertifikat aufgrund einer schlechten Handhabung nicht funktionsfähig ist
+(z. B. Verlust des Zertifikats oder Dateien nicht lesbar), ist es trotzdem möglich
+ein selbst-signiertes Zertifikat zu regenerieren :
 
 ```bash
-yunohost domain cert install your.domain.tld --self-signed --force
+yunohost domain cert install Ihre.domain.tld --self-signed --force
 ```
 
-If YunoHost thinks that your domain is badly configured despite the fact that you checked the DNS configuration and you have access in HTTP to your server from outside your local network, then you can:
+Trotz einer sorgfältigen Überprüfung der DNS-Konfiguration und auch von außen
+die Möglichkeit mit HTTP-Modus Zugriff auf den Webserver besteht, kann YunoHost
+manchmal die Einstellungen verweigern. In diesem Fall ist es notwendig :
 
-- add a line `127.0.0.1 your.domain.tld` to the file `/etc/hosts` on your server;
-- if the certificate installation still doesn't work, you can disable the checks with `--no-checks` after the `cert install` command.
+- die Parameter `127.0.0.1 Ihre.domain.tld` auf der Datei `/etc/hosts` des Webserver hinzufügen.
+Wenn es immer noch nicht funktionsfähig ist, also die Überprüfungen deaktivieren mit `--no-checks` nach dem Befehl `cert install`.
