--- a/i18n/es/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/certificate.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/certificate.mdx
@@ -1,83 +1,86 @@
 ---
-title: Certificate
+title: Certificado
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-Certificates are used to guarantee the confidentiality and authenticity of the communication between a web browser and your server. In particular, they protect against attackers trying to impersonate your server.
+Los certificados sirven para garantizar la confidencialidad y la autenticidad de las comunicaciones entre un navegador web y tu servidor. En particular, permite proteger los visitantes contra atacantes que podrían intentar de robar la identidad del servidor.
 
-YunoHost provides a **self-signed** certificate, it means that your server guaranties the certificate validity. It's enough **for personal usage**, because you trust your own server. But this could be a problem if you want to open access to anonymous like web user for a website.
+Por defecto, YunoHost provee un certificado **auto-firmado**, lo que significa que es tu servidor el que garantiza la validez del certificado. Es suficiente **en el caso de un uso personal**, porque puedes confiar en tu propio servidor, pero esto planteará problemas si piensas en abrir el acceso a tu servidor a personas anónimas, por ejemplo si quieres alojar un sitio web.
 
-In practice, visitors will see a screen list this:
+En efecto, los usuarios deberán pasar por una pantalla de este tipo :
 
 ![](/img/postinstall_error.png)
 
-Which basically asks the visitor : **"Do you trust the server hosting this website?"**. This can rightfully frighten a lot of people.
+Esta pantalla equivale a que te pidan ** ¿ Confías en el servidor que aloja este sitio ? ***. Esto puede asustar tu usuarios (con toda la razón).
 
-To avoid this confusion, it's possible to get a certificate signed a known authority named **Let's Encrypt** which provide free certificates directly recognized by browsers. YunoHost allows to directly install this certificate from the web administration interface or from the command line.
+Para evitar esta confusión, es posible obtener un certificado, reconocido directamente por los navegadores, firmado por una autoridad « conocida » : **Let's Encrypt**, **Gandi**, **RapidSSL**, **StartSSL**, **Cacert**.
 
-### Install a Let's Encrypt certificate
+**Let's Encrypt** propone certificados gratuitos. Desde la versión 2.5, YunoHost permite instalar directamente tales certificados desde la interfaz de administración o la línea de comandos. El resto del documento detalla la instalación y la firma de este tipo de certificado. También puedes [instalar un certificado de otra autoridad que Let's Encrypt](/certificate_custom).
 
-Before attempting to install a Let's Encrypt certificate, you should make sure that your DNS is correctly configured (your.domain.tld should point to your server's IP) and that your domain is accessible through HTTP from outside your local network (i.e. at least port 80 should be forwarded to your server).
+### Instalar un certificado Let's Encrypt
+
+Antes de intentar la instalación de un certificado Let's Encrypt, primero debes asegurarte de que el DNS está configurado correctamente (tu.dominio.tld debe apuntar hacia la IP de tu servidor) y que el sitio está accesible en HTTP desde afuera (i.e. por lo menos que el puerto 80 está correctamente redirigido hacia tu servidor).
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-Go to the 'Domain' part of the admin interface, then in the section dedicated to your.domain.tld. You should find a 'SSL certificate' button:
+En la categoría 'Dominio' de la interfaz de administración, y luego en la sección dedicada a tu dominio, encontrarás un botón 'Certificado SSL'.
 
 ![](/img/domain-certificate-button.png)
 
-In the 'SSL certificate' section, you can see the status of the current certificate. If you just added the domain, it should be a self-signed certificate.
+En la sección 'Certificado SSL', puedes ver el estado corriente del certificado.
+Si acabas de añadir el dominio, ya dispone de un certificado auto-firmado.
 
 ![](/img/certificate-before-LE.png)
 
-If your domain is correctly configured, it is then possible to install the Let's Encrypt certificate via the green button.
+Si tu dominio está configurado correctamente, es posible instalar un certificado Let's Encrypt vía el botón verde.
 
 ![](/img/certificate-after-LE.png)
 
-Once the install is made, you can check that the certificate is live via your browser by going to your domain in HTTPS. The certificate will automatically be renewed every three months.
+Una vez la instalación terminada, puedes ir a tu dominio vía tu navegador, en HTTPS, para comprobar que tu certificado está bien firmado por Let's Encrypt. El certificado se renovará automáticamente al cabo de cada periodo de tres meses.
 
 ![](/img/certificate-signed-by-LE.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-Connect to your server through SSH.
+Conectate en tu servidor en SSH.
 
-You can check the status of your current certificate with:
-
-```bash
-yunohost domain cert status your.domain.tld
-```
-
-Install a Let's Encrypt certificate with
+Puedes comprobar el estatus corriente de tu certificado vía
 
 ```bash
-yunohost domain cert install your.domain.tld
+yunohost domain cert status tu.dominio.tld
 ```
 
-This should return :
+Instala el certificado Let's Encrypt vía
+
+```bash
+yunohost domain cert install tu.dominio.tld
+```
+
+Este comando debe devolverte :
 
 ```bash
 Success! The SSOwat configuration has been generated
 Success! Successfully installed Let's Encrypt certificate for domain DOMAIN.TLD!
 ```
 
-Once this is done, you can check that the certificate is live via your browser by going to your domain in HTTPS. The certificate will automatically be renewed every three months.
+Una vez que la instalación está terminada, puedes dirigirte a tu dominio vía tu navegador, en HTTPS, para comprobar que el certificado está bien firmado por Let's Encrypt. El certificado se renovará automáticamente al cabo de cada periodo de tres meses.
 
 </TabItem>
 </Tabs>
 
-#### Troubleshooting
+##### Si hay un problema
 
-If due to some bad tweaking, your certificate ends up in a bad state (e.g. lost the certificate or unable to read the files), you should be able to clean the situation by regenerating a self-signed certificate:
+Si, después de una manipulación incorrecta, un certificado se encuentra en una mala situación (e.g. pérdida del certificado o imposibilidad de leerlo), es posible regenerar un certificado autofirmado :
 
 ```bash
-yunohost domain cert install your.domain.tld --self-signed --force
+yunohost domain cert install tu.dominio.tld --self-signed --force
 ```
 
-If YunoHost thinks that your domain is badly configured despite the fact that you checked the DNS configuration and you have access in HTTP to your server from outside your local network, then you can:
+Si YunoHost te dice que tu dominio está mal configurado mientras que has verificado tu configuración DNS y que tienes acceso a tu servidor en HTTP desde afuera, puedes intentar :
 
-- add a line `127.0.0.1 your.domain.tld` to the file `/etc/hosts` on your server;
-- if the certificate installation still doesn't work, you can disable the checks with `--no-checks` after the `cert install` command.
+- de añadir una línea `127.0.0.1 tu.dominio.tld` al archivo `/etc/hosts` en tu servidor ;
+- si la instalación todavía no funciona, desactiva las verificaciones añadiendo `--no-checks` al comando `cert install`.
