--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/certificate.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/25.domains/certificate.mdx
@@ -1,83 +1,90 @@
 ---
-title: Certificate
+title: Certificati
 ---
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-Certificates are used to guarantee the confidentiality and authenticity of the communication between a web browser and your server. In particular, they protect against attackers trying to impersonate your server.
+I certificati sono utilizzati per garantire la confidenzialità e l'autenticità delle comunicazioni tra il browser e il server. In particolare proteggono il visitatore del sito da usurpazioni dell'identità del server.
 
-YunoHost provides a **self-signed** certificate, it means that your server guaranties the certificate validity. It's enough **for personal usage**, because you trust your own server. But this could be a problem if you want to open access to anonymous like web user for a website.
+YunoHost fornisce di default un certificato **auto firmato**, cioè il vostro server garantisce la validità del certificato. Questo metodo è valido per un **uso personale** del vostro server, del quale certamente vi fidate, mentre non è sufficiente se volete esporre il vostro server su internet ad esempio se esso ospita un sito web.
 
-In practice, visitors will see a screen list this:
+Con questa configurazioni chi accede al vostro sito vedrà una schermata del tipo:
 
 ![](/img/postinstall_error.png)
 
-Which basically asks the visitor : **"Do you trust the server hosting this website?"**. This can rightfully frighten a lot of people.
+Il browser fondamentalmente ci chiede **«Potete fidarvi del server che ospita questo sito?»** e giustamente molti visitatori possono preoccuparsi davanti a tale domanda.
 
-To avoid this confusion, it's possible to get a certificate signed a known authority named **Let's Encrypt** which provide free certificates directly recognized by browsers. YunoHost allows to directly install this certificate from the web administration interface or from the command line.
+Per evitare questa situazione è possibile ottenere un certificato riconosciuto dai browser e firmato da un'autorità conosciuta come **Let's Encrypt**, **Gandi**, **RapidSSL**, **StartSSL**, **Cacert**.
 
-### Install a Let's Encrypt certificate
+In particolare **Let's Encrypt** offre i certificati gratuitamente. Dalla versione 2.5 YunoHost permette di installare il certificato direttamente dall'interfaccia di amministrazione web o da linea di comando. Di seguito troverete la documentazione per l'installazione e la gestione di un certificato. È comunque possibile [installare ugualmente un certificato di un'autorità diversa da Let's Encrypt](/certificate_custom).
 
-Before attempting to install a Let's Encrypt certificate, you should make sure that your DNS is correctly configured (your.domain.tld should point to your server's IP) and that your domain is accessible through HTTP from outside your local network (i.e. at least port 80 should be forwarded to your server).
+### Installare un certificato Let's Encrypt
+
+Prima di installare il certificato Let's Encrypt, assicuratevi che il vostro DNS
+sia correttamente configurato (nomevostrodominio.tld deve puntare all'indirizzo
+IP del vostro server) e che il vostro sito sia accessibile in HTTP dall'esterno
+(la porta 80 deve essere aperta e rediretta verso il vostro server).
 
 <Tabs groupId="admin-commands">
 <TabItem value="web" label="From the web interface">
 
-Go to the 'Domain' part of the admin interface, then in the section dedicated to your.domain.tld. You should find a 'SSL certificate' button:
+Recatevi nella sezione 'Domini' dell'interfaccia di amministrazione, scegliete la sezione del vostro dominio, qui troverete un pulsante 'Certificato SSL'
 
 ![](/img/domain-certificate-button.png)
 
-In the 'SSL certificate' section, you can see the status of the current certificate. If you just added the domain, it should be a self-signed certificate.
+Nella sezione 'Certificati SSL' potere visualizzare lo stato attuale del
+certificato. Se avete appena creato il dominio, esso disporrà di un certificato
+auto firmato.
 
 ![](/img/certificate-before-LE.png)
 
-If your domain is correctly configured, it is then possible to install the Let's Encrypt certificate via the green button.
+Se il vostro dominio è correttamente configurato è possibile installare il certificato Let's Encrypt con il bottone verde.
 
 ![](/img/certificate-after-LE.png)
 
-Once the install is made, you can check that the certificate is live via your browser by going to your domain in HTTPS. The certificate will automatically be renewed every three months.
+Una volta installato il certificato potete verificarne il corretto funzionamento collegandovi con il vostro browser al dominio in HTTPS. Il certificato verrà automaticamente rinnovato ogni tre mesi.
 
 ![](/img/certificate-signed-by-LE.png)
 
 </TabItem>
 <TabItem value="cli" label="From the command line">
 
-Connect to your server through SSH.
+Collegatevi al server con SSH.
 
-You can check the status of your current certificate with:
+Potete controllare lo stato del certificato in uso con il comando:
 
 ```bash
 yunohost domain cert status your.domain.tld
 ```
 
-Install a Let's Encrypt certificate with
+Installate il certificato Let's Encrypt con il comando:
 
 ```bash
 yunohost domain cert install your.domain.tld
 ```
 
-This should return :
+Che dovrebbe dare come risultato:
 
 ```bash
 Success! The SSOwat configuration has been generated
 Success! Successfully installed Let's Encrypt certificate for domain DOMAIN.TLD!
 ```
 
-Once this is done, you can check that the certificate is live via your browser by going to your domain in HTTPS. The certificate will automatically be renewed every three months.
+Una volta installato il certificato potete verificarne il corretto funzionamento collegandovi con il vostro browser al dominio in HTTPS. Il certificato verrà automaticamente rinnovato ogni tre mesi.
 
 </TabItem>
 </Tabs>
 
-#### Troubleshooting
+### Problemi e soluzioni
 
-If due to some bad tweaking, your certificate ends up in a bad state (e.g. lost the certificate or unable to read the files), you should be able to clean the situation by regenerating a self-signed certificate:
+Se il vostro certificato risultasse non funzionante a causa di qualche errore (ad esempio lo avete perso oppure non siete in grado di leggere i file) potete ripulire la situazione rigenerando un certificato autofirmato con questo comando:
 
 ```bash
 yunohost domain cert install your.domain.tld --self-signed --force
 ```
 
-If YunoHost thinks that your domain is badly configured despite the fact that you checked the DNS configuration and you have access in HTTP to your server from outside your local network, then you can:
+Se YunoHost pensa che il vostro dominio non è configurato correttamente nonstante abbiate controllato la configurazione del DNS e riuscite a collegarvi in HTTP al vostro server anche dall'esterno della rete locale allora potete:
 
-- add a line `127.0.0.1 your.domain.tld` to the file `/etc/hosts` on your server;
-- if the certificate installation still doesn't work, you can disable the checks with `--no-checks` after the `cert install` command.
+- aggiungere una linea `127.0.0.1 vostrodominio.tld` nel file `/etc/hosts` sul vostro server;
+- se nonostante questo l'installazione del certificato dovesse ancora fallire potete disabilitare il controllo con l'opzione `--no-checks` dopo il comando `cert install`.
